{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 582,
  "lineage": "c5680f44-1c31-6cfb-23da-4b68763dcf7e",
  "resources": [
    {
      "module": "module.alb_system",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:loadbalancer/app/tf-lb-20251222074542891000000005/73d722c84ee9936c",
            "arn_suffix": "app/tf-lb-20251222074542891000000005/73d722c84ee9936c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tf-lb-20251222074542891000000005-86319628.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:loadbalancer/app/tf-lb-20251222074542891000000005/73d722c84ee9936c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20251222074542891000000005",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-0f6936d2397856ff5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c5b1c3213a39a7c"
              },
              {
                "subnet_id": "subnet-0bf39d08e065fd298"
              }
            ],
            "subnets": [
              "subnet-07c5b1c3213a39a7c",
              "subnet-0bf39d08e065fd298"
            ],
            "tags": {
              "Name": "Internal-ALB"
            },
            "tags_all": {
              "Name": "Internal-ALB"
            },
            "vpc_id": "vpc-0b79ab68d07044e2e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:loadbalancer/app/tf-lb-20251222074542891000000005/73d722c84ee9936c"
          },
          "dependencies": [
            "module.network.aws_security_group.internal-alb-sg",
            "module.network.aws_subnet.priv-1",
            "module.network.aws_subnet.priv-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.alb_system",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:loadbalancer/app/public-alb/b1116d89342e81ca",
            "arn_suffix": "app/public-alb/b1116d89342e81ca",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-alb-1162169128.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:loadbalancer/app/public-alb/b1116d89342e81ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-0228ec7d4f6973975"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f558e5f90ebadb4"
              },
              {
                "subnet_id": "subnet-072a033a06e167c72"
              }
            ],
            "subnets": [
              "subnet-04f558e5f90ebadb4",
              "subnet-072a033a06e167c72"
            ],
            "tags": {
              "Name": "Public-ALB"
            },
            "tags_all": {
              "Name": "Public-ALB"
            },
            "vpc_id": "vpc-0b79ab68d07044e2e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:loadbalancer/app/public-alb/b1116d89342e81ca"
          },
          "dependencies": [
            "module.network.aws_security_group.public-alb-sg",
            "module.network.aws_subnet.pub-1",
            "module.network.aws_subnet.pub-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.alb_system",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:listener/app/tf-lb-20251222074542891000000005/73d722c84ee9936c/ca909caa83aeb5b4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/was-target-group/7874a1eac654dbd4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:listener/app/tf-lb-20251222074542891000000005/73d722c84ee9936c/ca909caa83aeb5b4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:loadbalancer/app/tf-lb-20251222074542891000000005/73d722c84ee9936c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:listener/app/tf-lb-20251222074542891000000005/73d722c84ee9936c/ca909caa83aeb5b4"
          },
          "dependencies": [
            "module.alb_system.aws_lb.internal_alb",
            "module.alb_system.aws_lb_target_group.internal_alb_target_group",
            "module.network.aws_security_group.internal-alb-sg",
            "module.network.aws_subnet.priv-1",
            "module.network.aws_subnet.priv-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.alb_system",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:listener/app/public-alb/b1116d89342e81ca/ecca594861f49aa4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:listener/app/public-alb/b1116d89342e81ca/ecca594861f49aa4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:loadbalancer/app/public-alb/b1116d89342e81ca",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:listener/app/public-alb/b1116d89342e81ca/ecca594861f49aa4"
          },
          "dependencies": [
            "module.alb_system.aws_lb.public_alb",
            "module.alb_system.aws_lb_target_group.public_alb_target_group",
            "module.network.aws_security_group.public-alb-sg",
            "module.network.aws_subnet.pub-1",
            "module.network.aws_subnet.pub-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.alb_system",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/was-target-group/7874a1eac654dbd4",
            "arn_suffix": "targetgroup/was-target-group/7874a1eac654dbd4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/was-target-group/7874a1eac654dbd4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "was-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/was-target-group/7874a1eac654dbd4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_system",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9",
            "arn_suffix": "targetgroup/web-target-group/3378fc1263b68be9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_system",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "was_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/was-target-group/7874a1eac654dbd4-2025122207455621390000000d",
            "port": 8080,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/was-target-group/7874a1eac654dbd4",
            "target_id": "i-0f1a61da4549e5cab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_system.aws_lb_target_group.internal_alb_target_group",
            "module.instance.aws_instance.was-1",
            "module.instance.aws_instance.was-2",
            "module.network.aws_security_group.was-sg",
            "module.network.aws_subnet.priv-1",
            "module.network.aws_subnet.priv-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/was-target-group/7874a1eac654dbd4-20251222074556289400000010",
            "port": 8080,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/was-target-group/7874a1eac654dbd4",
            "target_id": "i-0cadeacbbc79e1c93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_system.aws_lb_target_group.internal_alb_target_group",
            "module.instance.aws_instance.was-1",
            "module.instance.aws_instance.was-2",
            "module.network.aws_security_group.was-sg",
            "module.network.aws_subnet.priv-1",
            "module.network.aws_subnet.priv-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.alb_system",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9-2025122207455618360000000c",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9",
            "target_id": "i-0670986d789391070"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_system.aws_lb_target_group.public_alb_target_group",
            "module.instance.aws_instance.web-1",
            "module.instance.aws_instance.web-2",
            "module.network.aws_security_group.web-sg",
            "module.network.aws_subnet.priv-1",
            "module.network.aws_subnet.priv-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9-2025122207455622460000000f",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9",
            "target_id": "i-09bc23f1af2a39db7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_system.aws_lb_target_group.public_alb_target_group",
            "module.instance.aws_instance.web-1",
            "module.instance.aws_instance.web-2",
            "module.network.aws_security_group.web-sg",
            "module.network.aws_subnet.priv-1",
            "module.network.aws_subnet.priv-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a71e3eb8b23101ed",
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:instance/i-081eef918bcac3887",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081eef918bcac3887",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Final-Project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-062e3b3870a7c194b"
              }
            ],
            "primary_network_interface_id": "eni-062e3b3870a7c194b",
            "private_dns": "ip-10-0-1-253.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.253",
            "public_ip": "3.39.6.245",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aacd5caec5d23c70",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f558e5f90ebadb4",
            "tags": {
              "Name": "Bastion-Server"
            },
            "tags_all": {
              "Name": "Bastion-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bfc0b3b89438cc71"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "i-081eef918bcac3887",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.bastion-sg",
            "module.network.aws_subnet.pub-1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-013c951bfeb5d9c3b",
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:instance/i-042e6760be1bd5db0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042e6760be1bd5db0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Final-Project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02aba5e29a6c4ad26"
              }
            ],
            "primary_network_interface_id": "eni-02aba5e29a6c4ad26",
            "private_dns": "ip-10-0-1-33.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.33",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf2cacda6d34a940",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04f558e5f90ebadb4",
            "tags": {
              "Name": "NAT-Server"
            },
            "tags_all": {
              "Name": "NAT-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07809886a330d82cb"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "i-042e6760be1bd5db0",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.nat-sg",
            "module.network.aws_subnet.pub-1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "was-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-013c951bfeb5d9c3b",
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:instance/i-0f1a61da4549e5cab",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1a61da4549e5cab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Final-Project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-097641191f469f624"
              }
            ],
            "primary_network_interface_id": "eni-097641191f469f624",
            "private_dns": "ip-10-0-11-128.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.128",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01915466237a7f72f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c5b1c3213a39a7c",
            "tags": {
              "Name": "WAS-Server-1"
            },
            "tags_all": {
              "Name": "WAS-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb9188c407f3ab6f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "i-0f1a61da4549e5cab",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.was-sg",
            "module.network.aws_subnet.priv-1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "was-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-013c951bfeb5d9c3b",
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:instance/i-0cadeacbbc79e1c93",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cadeacbbc79e1c93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Final-Project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01bb241e6dc8e50b7"
              }
            ],
            "primary_network_interface_id": "eni-01bb241e6dc8e50b7",
            "private_dns": "ip-10-0-12-152.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.152",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0181772e8f54527a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf39d08e065fd298",
            "tags": {
              "Name": "WAS-Server-2"
            },
            "tags_all": {
              "Name": "WAS-Server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb9188c407f3ab6f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "i-0cadeacbbc79e1c93",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.was-sg",
            "module.network.aws_subnet.priv-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-013c951bfeb5d9c3b",
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:instance/i-0670986d789391070",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0670986d789391070",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Final-Project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bdc2e9a99f35fd75"
              }
            ],
            "primary_network_interface_id": "eni-0bdc2e9a99f35fd75",
            "private_dns": "ip-10-0-11-123.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.123",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f7ca9da9aaf34373",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c5b1c3213a39a7c",
            "tags": {
              "Name": "WEB-Server-1"
            },
            "tags_all": {
              "Name": "WEB-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02197110f1c4a737e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "i-0670986d789391070",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.web-sg",
            "module.network.aws_subnet.priv-1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-013c951bfeb5d9c3b",
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:instance/i-09bc23f1af2a39db7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bc23f1af2a39db7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Final-Project-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0125e929af7f4a545"
              }
            ],
            "primary_network_interface_id": "eni-0125e929af7f4a545",
            "private_dns": "ip-10-0-12-130.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.130",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a325df8bbf9fc883",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf39d08e065fd298",
            "tags": {
              "Name": "WEB-Server-2"
            },
            "tags_all": {
              "Name": "WEB-Server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02197110f1c4a737e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "i-09bc23f1af2a39db7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.web-sg",
            "module.network.aws_subnet.priv-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_1_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9-2025122207455621870000000e",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9",
            "target_id": "i-0670986d789391070"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_system.aws_lb_target_group.public_alb_target_group",
            "module.instance.aws_instance.web-1",
            "module.network.aws_security_group.web-sg",
            "module.network.aws_subnet.priv-1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_2_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9-2025122207455604990000000b",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:089955620282:targetgroup/web-target-group/3378fc1263b68be9",
            "target_id": "i-09bc23f1af2a39db7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_system.aws_lb_target_group.public_alb_target_group",
            "module.instance.aws_instance.web-2",
            "module.network.aws_security_group.web-sg",
            "module.network.aws_subnet.priv-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:internet-gateway/igw-0d344dda90f113803",
            "id": "igw-0d344dda90f113803",
            "owner_id": "089955620282",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Final-Project-IGW"
            },
            "tags_all": {
              "Name": "Final-Project-IGW"
            },
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rt-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-034cdefb5ef8d2d591080289494",
            "instance_id": "i-042e6760be1bd5db0",
            "instance_owner_id": "089955620282",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-02aba5e29a6c4ad26",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-034cdefb5ef8d2d59",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-034cdefb5ef8d2d59"
          },
          "dependencies": [
            "module.instance.aws_instance.nat-server",
            "module.network.aws_route_table.private-rt",
            "module.network.aws_security_group.nat-sg",
            "module.network.aws_subnet.pub-1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rt-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d344dda90f113803",
            "id": "r-rtb-0b212810b7e2f192c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b212810b7e2f192c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b212810b7e2f192c"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:route-table/rtb-034cdefb5ef8d2d59",
            "id": "rtb-034cdefb5ef8d2d59",
            "owner_id": "089955620282",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "rtb-034cdefb5ef8d2d59",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:route-table/rtb-0b212810b7e2f192c",
            "id": "rtb-0b212810b7e2f192c",
            "owner_id": "089955620282",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "rtb-0b212810b7e2f192c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b71f25927cfa717b",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-034cdefb5ef8d2d59",
            "subnet_id": "subnet-07c5b1c3213a39a7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private-rt",
            "module.network.aws_subnet.priv-1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090b13b7fdb0387e8",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-034cdefb5ef8d2d59",
            "subnet_id": "subnet-0bf39d08e065fd298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private-rt",
            "module.network.aws_subnet.priv-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6a94de97b971f1a",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b212810b7e2f192c",
            "subnet_id": "subnet-04f558e5f90ebadb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.pub-1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018cc0a68067093fd",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b212810b7e2f192c",
            "subnet_id": "subnet-072a033a06e167c72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.pub-2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group/sg-0d990a949a78aa917",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d990a949a78aa917",
            "ingress": [],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "089955620282",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sg-0d990a949a78aa917",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group/sg-0bfc0b3b89438cc71",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bfc0b3b89438cc71",
            "ingress": [],
            "name": "Bastion-SG",
            "name_prefix": "",
            "owner_id": "089955620282",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-SG"
            },
            "tags_all": {
              "Name": "Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sg-0bfc0b3b89438cc71",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group/sg-00eefe373e4f9c25c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00eefe373e4f9c25c",
            "ingress": [],
            "name": "DB-SG",
            "name_prefix": "",
            "owner_id": "089955620282",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB-SG"
            },
            "tags_all": {
              "Name": "DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sg-00eefe373e4f9c25c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group/sg-0f6936d2397856ff5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f6936d2397856ff5",
            "ingress": [],
            "name": "Internal-ALB-SG",
            "name_prefix": "",
            "owner_id": "089955620282",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Internal-ALB-SG"
            },
            "tags_all": {
              "Name": "Internal-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sg-0f6936d2397856ff5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group/sg-07809886a330d82cb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07809886a330d82cb",
            "ingress": [],
            "name": "NAT-SG",
            "name_prefix": "",
            "owner_id": "089955620282",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NAT-SG"
            },
            "tags_all": {
              "Name": "NAT-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sg-07809886a330d82cb",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group/sg-0228ec7d4f6973975",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0228ec7d4f6973975",
            "ingress": [],
            "name": "Public-ALB-SG",
            "name_prefix": "",
            "owner_id": "089955620282",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public-ALB-SG"
            },
            "tags_all": {
              "Name": "Public-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sg-0228ec7d4f6973975",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group/sg-0cb9188c407f3ab6f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cb9188c407f3ab6f",
            "ingress": [],
            "name": "WAS-SG",
            "name_prefix": "",
            "owner_id": "089955620282",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WAS-SG"
            },
            "tags_all": {
              "Name": "WAS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sg-0cb9188c407f3ab6f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group/sg-02197110f1c4a737e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02197110f1c4a737e",
            "ingress": [],
            "name": "WEB-SG",
            "name_prefix": "",
            "owner_id": "089955620282",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WEB-SG"
            },
            "tags_all": {
              "Name": "WEB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sg-02197110f1c4a737e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:subnet/subnet-07c5b1c3213a39a7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c5b1c3213a39a7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089955620282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Private-Subnet-1"
            },
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "subnet-07c5b1c3213a39a7c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:subnet/subnet-0bf39d08e065fd298",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf39d08e065fd298",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089955620282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Private-Subnet-2"
            },
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "subnet-0bf39d08e065fd298",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:subnet/subnet-04f558e5f90ebadb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f558e5f90ebadb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089955620282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "subnet-04f558e5f90ebadb4",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:subnet/subnet-072a033a06e167c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072a033a06e167c72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089955620282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-0b79ab68d07044e2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "subnet-072a033a06e167c72",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:vpc/vpc-0b79ab68d07044e2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cae284422ef1dcbc",
            "default_route_table_id": "rtb-085887fc159141e89",
            "default_security_group_id": "sg-04872f59a96e77b03",
            "dhcp_options_id": "dopt-085f3a7e0f0c96ee1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b79ab68d07044e2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085887fc159141e89",
            "owner_id": "089955620282",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Final-Project-VPC"
            },
            "tags_all": {
              "Name": "Final-Project-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "vpc-0b79ab68d07044e2e",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb-egress-allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-032d6c46c73916106",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-032d6c46c73916106",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0d990a949a78aa917",
            "security_group_rule_id": "sgr-032d6c46c73916106",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-032d6c46c73916106",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bastion-egress-allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-0c3a424dea862dad2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c3a424dea862dad2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0bfc0b3b89438cc71",
            "security_group_rule_id": "sgr-0c3a424dea862dad2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-0c3a424dea862dad2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.bastion-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db-egress-allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-0d2842641aeb92dd3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d2842641aeb92dd3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-00eefe373e4f9c25c",
            "security_group_rule_id": "sgr-0d2842641aeb92dd3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-0d2842641aeb92dd3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.db-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "internal-alb-egress-allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-09abdb20abe258c17",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09abdb20abe258c17",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0f6936d2397856ff5",
            "security_group_rule_id": "sgr-09abdb20abe258c17",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-09abdb20abe258c17",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.internal-alb-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "public-alb-egress-allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-03e287957f4dde072",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03e287957f4dde072",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0228ec7d4f6973975",
            "security_group_rule_id": "sgr-03e287957f4dde072",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-03e287957f4dde072",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.public-alb-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "was-egress-allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-0631a4da3ba743e92",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0631a4da3ba743e92",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0cb9188c407f3ab6f",
            "security_group_rule_id": "sgr-0631a4da3ba743e92",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-0631a4da3ba743e92",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.was-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web-egress-allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-0271ef07eedab88d6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0271ef07eedab88d6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-02197110f1c4a737e",
            "security_group_rule_id": "sgr-0271ef07eedab88d6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-0271ef07eedab88d6",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.web-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb-ingress-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-01071f67b28001827",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-01071f67b28001827",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0d990a949a78aa917",
            "security_group_rule_id": "sgr-01071f67b28001827",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-01071f67b28001827",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb-ingress-allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-095c07999ed37cbed",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-095c07999ed37cbed",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0d990a949a78aa917",
            "security_group_rule_id": "sgr-095c07999ed37cbed",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-095c07999ed37cbed",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion-ingress-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-02403a98802408376",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02403a98802408376",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0bfc0b3b89438cc71",
            "security_group_rule_id": "sgr-02403a98802408376",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-02403a98802408376",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.bastion-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db-ingress-allow-mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-04b7e43772f3c3759",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-04b7e43772f3c3759",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-00eefe373e4f9c25c",
            "security_group_rule_id": "sgr-04b7e43772f3c3759",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-04b7e43772f3c3759",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.db-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "internal-alb-ingress-allow-php",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-0a579ac46f7c39ea1",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9000,
            "id": "sgr-0a579ac46f7c39ea1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0f6936d2397856ff5",
            "security_group_rule_id": "sgr-0a579ac46f7c39ea1",
            "tags": null,
            "tags_all": {},
            "to_port": 9000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-0a579ac46f7c39ea1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.internal-alb-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nat-ingress-allow-dns-tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-078131bdccb356c7b",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-078131bdccb356c7b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-07809886a330d82cb",
            "security_group_rule_id": "sgr-078131bdccb356c7b",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-078131bdccb356c7b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.nat-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nat-ingress-allow-dns-udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-04c106f9334e5ebf3",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-04c106f9334e5ebf3",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-07809886a330d82cb",
            "security_group_rule_id": "sgr-04c106f9334e5ebf3",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-04c106f9334e5ebf3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.nat-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nat-ingress-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-0303f52fd1878fb5d",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0303f52fd1878fb5d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-07809886a330d82cb",
            "security_group_rule_id": "sgr-0303f52fd1878fb5d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-0303f52fd1878fb5d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.nat-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nat-ingress-allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-006b9d22248a9f794",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-006b9d22248a9f794",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-07809886a330d82cb",
            "security_group_rule_id": "sgr-006b9d22248a9f794",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-006b9d22248a9f794",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.nat-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nat-ingress-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-04578da5b32278e2b",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04578da5b32278e2b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-07809886a330d82cb",
            "security_group_rule_id": "sgr-04578da5b32278e2b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-04578da5b32278e2b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.nat-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public-alb-ingress-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-0524d9e418fee5431",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0524d9e418fee5431",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0228ec7d4f6973975",
            "security_group_rule_id": "sgr-0524d9e418fee5431",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-0524d9e418fee5431",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.public-alb-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public-alb-ingress-allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-081ff43e556bcdae0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-081ff43e556bcdae0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0228ec7d4f6973975",
            "security_group_rule_id": "sgr-081ff43e556bcdae0",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-081ff43e556bcdae0",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.public-alb-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "was-ingress-allow-php",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-0fa2f80b73b5a1709",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9000,
            "id": "sgr-0fa2f80b73b5a1709",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0cb9188c407f3ab6f",
            "security_group_rule_id": "sgr-0fa2f80b73b5a1709",
            "tags": null,
            "tags_all": {},
            "to_port": 9000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-0fa2f80b73b5a1709",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.was-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "was-ingress-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-01d2c56a6bc8d3034",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01d2c56a6bc8d3034",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0cb9188c407f3ab6f",
            "security_group_rule_id": "sgr-01d2c56a6bc8d3034",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-01d2c56a6bc8d3034",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.was-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-ingress-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-048aa73d582dcd871",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-048aa73d582dcd871",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-02197110f1c4a737e",
            "security_group_rule_id": "sgr-048aa73d582dcd871",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-048aa73d582dcd871",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.web-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-ingress-allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-04f9d0f62f83a04b4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-04f9d0f62f83a04b4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-02197110f1c4a737e",
            "security_group_rule_id": "sgr-04f9d0f62f83a04b4",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-04f9d0f62f83a04b4",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.web-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-ingress-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:089955620282:security-group-rule/sgr-0c520c8e0027396dc",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c520c8e0027396dc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-02197110f1c4a737e",
            "security_group_rule_id": "sgr-0c520c8e0027396dc",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "sgr-0c520c8e0027396dc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.web-sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sub_region",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:089955620282:subnet/subnet-082e36822c48df6d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082e36822c48df6d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089955620282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "vpc_id": "vpc-00258448b701f514a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "subnet-082e36822c48df6d2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.sub_region.aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sub_region",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:089955620282:subnet/subnet-032631b71380cf01d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032631b71380cf01d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089955620282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "vpc_id": "vpc-00258448b701f514a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "subnet-032631b71380cf01d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.sub_region.aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sub_region",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:089955620282:vpc/vpc-00258448b701f514a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ba81122844072ccc",
            "default_route_table_id": "rtb-09ec24ff63cb29d12",
            "default_security_group_id": "sg-0a882ebe93f4fba16",
            "dhcp_options_id": "dopt-097a52adf637f2c07",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00258448b701f514a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ec24ff63cb29d12",
            "owner_id": "089955620282",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "Tokyo-VPC"
            },
            "tags_all": {
              "Name": "Tokyo-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089955620282",
            "id": "vpc-00258448b701f514a",
            "region": "ap-northeast-1"
          }
        }
      ]
    }
  ]
}